Fixed movement buttons on mobile

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 #buttons>button{
-    font-size: 4em;
+    font-size: 5vw;
 }
 
 /* #Up {
